Upgrade from Java 7 to Java 8
- Update maven-compiler-plugin source/target from 1.7 to 1.8 in pom.xml
- Replace deprecated javax.xml.bind.DatatypeConverter with java.util.Base64
- Replace Calendar-based date arithmetic with java.time.Instant and ChronoUnit
- Convert anonymous inner classes to lambda expressions
- Apply streams API with method references for data processing
- Use diamond operator for generic type inference
- Use computeIfAbsent for Map operations
- Add try-with-resources for Scanner in UserServiceTGImpl
- Replace manual loops with Stream.filter/map/collect patterns
- Use String.isEmpty() instead of equals("") comparison

Co-Authored-By: Sam Fertig <sam.huntfertig@gmail.com>